--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "me.keegan.snap"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -19,8 +19,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.squareup.picasso:picasso:2.1.1'
-    compile 'com.parse:parse-android:1.15.8'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    // noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.parse-community:Parse-SDK-Android:1.18.5'
 }
